--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lee</groupId>
-    <artifactId>search_chess_next_move</artifactId>
+    <artifactId>chess</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>search_chess_next_move</name>
+    <name>chess</name>
     <url>http://maven.apache.org</url>
 
     <properties>
